test/tests/errors/error-file-put-nothing-in-buffer.sm
// true
// true
// false
/**/
/**/

program{
    file f withbuffer bf: int;
    put(f);
}